pleins de trucs oslm

--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
         </div>
         <div class="ligne"><h1>Ma To Do List</h1></div>
         <div class="ligne">
-            <button class="btn btn-primary" type="submit">Terminé</button>
-            <button class="btn btn-primary" type="submit">À faire</button>
-            <button class="btn btn-primary" type="submit">Tout</button>
+            <button id="btnMenu1" class="btn btn-primary" type="submit">Terminé</button>
+            <button id="btnMenu2" class="btn btn-primary" type="submit">À faire</button>
+            <button id="btnMenu3" class="btn btn-primary" type="submit">Tout</button>
         </div>
-        <div class="todoContainer">
-            <ul class="todoList"></ul>
-        </div>
-        <div class="ligne"><button class="btn btn-danger" type="submit">Clear List</button></div>
+        <!-- TACHES LISTE -->
+        <div class="todoList"></div>
+        <!-- BOUTON CLEAR -->
+        <div id= "clearBtn" class="ligne"><button class="btn btn-danger" type="submit">Clear List</button></div>
     </section>
     <!-- JS -->
     <script type="module" src="./public/js/main.js"></script>
